init apis for charts
