# server/endpoints/PlotScatterObservedPredictedEndpoint.py
@@ -1,0 +1,27 @@
+import logging
+from flask import Blueprint, request, jsonify, make_response
+
+from src.adv_xai_fulfilment.presentation.PlotScatterObservedPredictedPresentation import (
+    PlotScatterObservedPredictedPresentation,
+)
+
+scatterObservedPredictedEndpointBp = Blueprint("plot_scatter", __name__)
+
+
+@scatterObservedPredictedEndpointBp.route("/plot_scatter", methods=["POST"])
+def PlotScatterObservedPredictedEndpoint():
+    if request.method != "POST":
+        return "Not a valid request"
+
+    data: dict = request.get_json()
+    logging.info(f"called /plot_scatter api with params {data}")
+    try:
+        response: (
+            dict
+        ) = PlotScatterObservedPredictedPresentation().genarate_data_for_pilot(
+            model_file_name=data.get("model")
+        )
+        return make_response(jsonify(response), 200)
+    except Exception as e:
+        logging.error(f"error while featureimportance: {e}")
+        return make_response(jsonify({"status": e}))
